agregué el logon de la página web

--- a/new-password.html
+++ b/new-password.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<title>Yard Sale login</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<title>Yard Sale change password</title>
     <style>
         :root{
             --white:#f7f7f7;
@@ -45,6 +45,7 @@
             display: grid;
             grid-template-rows: auto 1fr auto;
             width: 300px;
+            justify-items: center;
         }
 
         .logo {
@@ -82,7 +83,7 @@
             font-size: var(--md);
             padding: 6px;
             margin-bottom: 16px;
-            
+            width: 300px;
         }
 
         .form {
@@ -91,6 +92,7 @@
         }
 
         .primary-button {
+            margin-top: var(--sm);
             background-color: #0000;
             height: 40px;
             border: 2px solid var(--hostital-green);
@@ -129,6 +131,10 @@
             .primary-button {
                 background-color: #acd9b2;
                 color: #ffffff;
+            }
+
+            .input {
+                width: 250px;
             }
         }
     </style>
