--- a/create-new-password.html
+++ b/create-new-password.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<title>Yard sale login</title>
-<style>
-    :root{
+    <title>Yard sale create a new password</title>
+    <style>
+        :root{
         --white:#f7f7f7;
         --black: #333;
         --very-light-pink: #c7c7c7;
@@ -49,11 +49,10 @@
         justify-items: center;
     }
 
-    .logo {
-        width: 200px;
-        margin-bottom: var(--xl);
-        justify-self: center;
-        display: none;
+    .title {
+        font-size: var(--lg);
+        margin-bottom: 12px;
+        margin: 24px 0;
     }
 
     .label {
@@ -67,7 +66,6 @@
         border: none;
         border-radius: 8px;
         height: 32px;
-        font-size: var(--md);
         padding: 6px;
         margin-bottom: var(--md);
         width: 295px;
@@ -79,6 +77,7 @@
     }
 
     .primary-button {
+        margin-top: 48px;
         background-color: #0000;
         height: 40px;
         border: 2px solid var(--hostital-green);
@@ -110,87 +109,33 @@
         width: 100%;
     }
 
-    .forgot {
-        margin-top: 16px;
-        text-align: center;
-        text-decoration: none;
-        text-align: center;
-        font-size: 14px;
-        color: var(--hostital-green);
-    }
-
-    .secoundary-button {
-        background-color: var(--hostital-green);
-        height: 40px;
-        border: 2px solid var(--hostital-green);
-        font-weight: 600;
-        cursor: pointer;
-        position: relative;
-        z-index: 1;
-        color: #fff;
-    }
-
-    .secoundary-button:hover {
-        transition: all ease-in-out .3s;
-        color: var(--hostital-green);
-    }
-
-    .secoundary-button::before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 0;
-        height: 100%;
-        background-color: #fff;
-        transition: all .3s;
-        z-index: -1;
-    }
-
-    .secoundary-button:hover::before {
-        width: 100%;
-    }
-
-    .sign-button {
-        margin-top: 48px;
-    }
-
     @media only screen and (max-width: 640px) {
-        .logo {display: block;}
 
         .primary-button {
             background-color: var(--hostital-green);
             color: #ffffff;
-        }
-
-        .secoundary-button {
-            background-color: #ffffff;
-            color: var(--hostital-green);
-        }
-
-        .sign-button {
-            margin-top: 162px;
+            margin-top: 125px;
         }
     }
-</style>
+    </style>
 </head>
 <body>
     <div class="login">
         <div action="" class="form-container">
-            <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
 
             <form action="/" class="form">
+                <h1 class="title">Create a new password</h1>
+
+                <label for="name" class="label">Name</label>
+                <input type="name" id="name" placeholder="Insert your complete name" class="input input-password">
+
                 <label for="email" class="label">Email address</label>
                 <input type="email" id="email" placeholder="name@example.com" class="input input-password">
 
                 <label for="password" class="label">Password</label>
                 <input type="password" id="password" placeholder="*********" class="input input-password">
 
-                <button type="submit" class="primary-button login-button"><span>Login in</span></button>
-                
-                <a href="/" class="forgot">Forgot my password</a>
-
-                <button type="submit" class="secoundary-button sign-button"><span>Sing up</span></button>
+                <button type="submit" class="primary-button login-button"><span>Create</span></button>
             </form>
         </div>
     </div>
