--- a/new-password.html
+++ b/new-password.html
@@ -79,7 +79,7 @@
             background-color: var(--text-input-field);
             border: none;
             border-radius: 8px;
-            height: 28px;
+            height: 32px;
             font-size: var(--md);
             padding: 6px;
             margin-bottom: 16px;
@@ -131,11 +131,9 @@
             .primary-button {
                 background-color: #acd9b2;
                 color: #ffffff;
+                margin-top: 150px;
             }
 
-            .input {
-                width: 250px;
-            }
         }
     </style>
 </head>
