--- a/home.html
+++ b/home.html
@@ -24,12 +24,82 @@
             --text-input-field: #f0efef;
         }
 
-
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Quicksand', sans-serif;
+        }
+
+        .main-container {
+            margin: 30px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 240px);
+            gap: 26px;
+            place-content: center;
+        }
+
+        .product-card {
+            width: 240px;
+        }
+
+        .product-card img {
+            width: 240px;
+            height: 180px;
+            border-radius: 20px;
+            object-fit: cover;
+        }
+
+        .product-card div img {
+            width: 35px;
+            height: 35px;
+        }
+
+        .product-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .product-card div figcaption {
+            font-size: var(--sm);
+            color: var(--very-light-pink);
+            text-align: center;
+        }
+
+        .product-card div p {
+            font-size: var(--md);
+            color: var(--black);
+            font-weight: bold;
+            text-align: center;
+        }
+
+        @media only screen and (max-width: 640px) {
+            .main-container {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, 140px);
+                margin: 10px;
+                gap: 26px;
+            }
+
+            .product-card {
+                width: 140px;
+            }
+
+            .product-card img {
+                width: 140px;
+                height: 100px;
+                border-radius: 20px;
+                object-fit: cover;
+            }
+
+            .product-card div figcaption {
+            font-size: 7;
+        }
+
+        .product-card div p {
+            font-size: 8;
+        }
         }
     </style>
 </head>
@@ -39,15 +109,19 @@
         <template id="card-container">
             <figure class="product-card">
                 <img src="" alt="" class="product-img">
-                <p>$120.00</p>
-                <figcaption></figcaption>
+                <div class="product-info">
+                    <p></p>
+                    <figcaption></figcaption>
+                    <img src="./icons/bt_add_to_cart.svg" alt="carrito" class="carrito">
+                </div>
             </figure>
         </template>
 
     </section>
     <script type="text/javascript">
+
         /*capturamos elementos del DOM*/
-        const card = document.querySelector('.product-card');
+        const tarjeta = document.querySelector('.main-container');
         const template = document.getElementById('card-container').content;
         const fragment = document.createDocumentFragment();
 
@@ -126,7 +200,7 @@
             fragment.appendChild(clon)
         });
 
-        card.appendChild(fragment)
+        tarjeta.appendChild(fragment)
     </script>
 </body>
 </html>
